--- a/Projet Web Commerce/Views/PPGestionnaires/ListeVendeurs.cshtml
+++ b/Projet Web Commerce/Views/PPGestionnaires/ListeVendeurs.cshtml
@@ -51,7 +51,8 @@
                                                       select new
                                                       {
                                                           Vendeur = vendeur,
-                                                          Commande = vc
+                                                          Commande = vc,
+                                                          CommandesList = Model.CommandesList.Where(cp => cp.NoVendeur == vendeur.NoVendeur).ToList(),
                                                       })
                                 .ToList();
 
@@ -70,6 +71,8 @@
                                         <th scope="col">Nb de produits inscrits</th>
                                         <th scope="col">Date de dernière commande</th>
                                         <th scope="col">Montant total avant taxes </th>
+                                        <th scope="col">Supprimer Panier</th>
+                                        <th scope="col">Supprimer Client</th>
                                         <th scope="col"></th>
                                     </tr>
                                 </thead>
@@ -97,6 +100,19 @@
                                             <td>@Html.DisplayFor(modelItem => item.Commande.DateCommande)</td>
                                             <td>@Html.DisplayFor(modelItem => item.Commande.MontantTotAvantTaxes)</td>
                                             <td>
+                                                @if (item.CommandesList.Count() > 0)
+                                                {
+                                                    <input type="checkbox" id="SPanier" name="SPanier" value="@item.Vendeur.NoVendeur">
+                                                }
+                                            </td>
+                                            <td>
+                                                @if (item.CommandesList.Count() == 0)
+                                                {
+                                                    <input type="checkbox" id="SVendeur" name="SVendeur" value="@item.Vendeur.NoVendeur">
+                                                }
+
+                                            </td>
+                                            <td>
                                                 <a asp-action="FraudeV" class="btn btn-danger" asp-route-id="@item.Vendeur.NoVendeur">Fraude</a>
                                                 <a asp-action="InactifV" class="btn btn-warning" asp-route-id="@item.Vendeur.NoVendeur">Inactif</a>
                                                 @if (item.Commande == null )
@@ -111,14 +127,132 @@
                             </table>
                         </div>
                     </div>
-                }               
+                } 
+                @if (Model.MoisAnneesDistinctsList.Count() == 0)
+                {
+                    <p>Il n'y a aucun Vendeurs</p>
+                }
+                else
+                {
+                    <br />
+                    <a id="enregistrementButton" class="btn btn-danger">Enregistrement des modifications</a>
+                }
             </div>
         </section>
     </div>
 </div>
 
 <script>
-    function lstVendeursAConfirmer() {
-        window.location = "https://localhost:44376/PPGestionnaires/ListeVendeursAConfirmer"
-    }
+    document.getElementById('enregistrementButton').addEventListener('click', function () {
+        var panierCheckboxes = document.getElementsByName('SPanier');
+        var vendeurCheckboxes = document.getElementsByName('SVendeur');
+        var panierCount = 0;
+        var vendeurCount = 0;
+        var formData = new FormData();
+
+        for (var i = 0; i < panierCheckboxes.length; i++) {
+            if (panierCheckboxes[i].checked) {
+                panierCount++;
+                formData.append('panierToDelete', panierCheckboxes[i].value);
+            }
+        }
+
+        for (var i = 0; i < vendeurCheckboxes.length; i++) {
+            if (vendeurCheckboxes[i].checked) {
+                vendeurCount++;
+                formData.append('vendeursToDelete', vendeurCheckboxes[i].value);
+            }
+        }
+
+        console.log("Panier to delete: ", formData.getAll('panierToDelete'));
+        console.log("Vendeur to delete: ", formData.getAll('vendeursToDelete'));
+
+        if (panierCount > 0 || vendeurCount > 0) {
+            Swal.fire({
+                title: 'Enregistrement des modifications',
+                html: 'Nombre de Panier Supprimer : ' + panierCount + '<br>' +
+                    'Nombre de Vendeurs Supprimer : ' + vendeurCount,
+                icon: 'warning',
+                showDenyButton: true,
+                confirmButtonText: "Confirmer",
+                denyButtonText: `Annuler`,
+                showLoaderOnConfirm: true,
+                preConfirm: () => {
+                    if (vendeurCount > 0 && panierCount > 0) {
+                        return Promise.all([
+                            fetch('/PPGestionnaires/SupprimerVendeur', {
+                                method: 'POST',
+                                body: formData
+                            }),
+                            fetch('/PPGestionnaires/SupprimerVPanier', {
+                                method: 'POST',
+                                body: formData
+                            })
+                        ])
+                            .then(([response1, response2]) => {
+                                if (!response1.ok || !response2.ok) {
+                                    throw new Error('One or more requests failed');
+                                }
+                                return Promise.all([response1.json(), response2.json()]);
+                            })
+                            .catch(error => {
+                                Swal.showValidationMessage(`Request failed: ${error}`);
+                            });
+                    } else if (vendeurCount > 0) {
+                        return fetch('/PPGestionnaires/SupprimerVendeur', {
+                            method: 'POST',
+                            body: formData
+                        })
+                            .then(response => {
+                                if (!response.ok) {
+                                    throw new Error(response.statusText);
+                                }
+                                return response.json();
+                            })
+                            .catch(error => {
+                                Swal.showValidationMessage(`Request failed: ${error}`);
+                            });
+                    } else if (panierCount > 0) {
+                        return fetch('/PPGestionnaires/SupprimerVPanier', {
+                            method: 'POST',
+                            body: formData
+                        })
+                            .then(response => {
+                                if (!response.ok) {
+                                    throw new Error(response.statusText);
+                                }
+                                return response.json();
+                            })
+                            .catch(error => {
+                                Swal.showValidationMessage(`Request failed: ${error}`);
+                            });
+                    } else {
+                        Swal.showValidationMessage("Aucun vendeur ou paniers n'a été sélectionné.");
+                        return;
+                    }
+                }
+
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    Swal.fire("Sauvegarder!", "", "success").then(() => {
+                        location.reload();
+                    });
+                } else if (result.isDenied) {
+                    Swal.fire("Les modifications ne sont pas enregistrées", "", "info");
+                }
+            });
+        } else {
+            Swal.fire({
+                title: 'Aucun élément sélectionné',
+                text: 'Veuillez sélectionner au moins un élément à supprimer.',
+                icon: 'warning'
+            });
+        }
+    });
+
+
+
+
+
+
 </script>
