fixed merge error

--- a/Projet Web Commerce/Views/PPGestionnaires/ListeVendeurs.cshtml
+++ b/Projet Web Commerce/Views/PPGestionnaires/ListeVendeurs.cshtml
@@ -15,7 +15,7 @@
             </div>
             
             <div class="container mt-4">
-                @if (Model.MoisAnneesDistinctsList.Count == 0)
+                @foreach (var date in Model.MoisAnneesDistinctsList)
                 {
                     <div class="card">
                         <div class="card-body">
